cursor edit + animation change

--- a/src/components/Animation.css
+++ b/src/components/Animation.css
@@ -1,25 +1,34 @@
-@randomLeft: `Math.round(Math.random() * 100)`;
-
 .animation {
     background-color: #282c34;
     width: 100%;
-    height: 100%; 
-    position: relative;
+    height: 100vh; 
+    position: absolute;
     margin: 0;
     padding: 0;
     overflow: hidden;
+    cursor: none;
+    top: 0;
+}
+
+.cursor {
+    width: 20px;
+    height: 20px;
+    border: 2px solid white;
+    border-radius: 50%;
+    position: absolute;
+    pointer-events: none;
 }
 
 .box ul li {
     position: absolute;
-    width: 35px;
-    height: 35px;
+    width: 25px;
+    height: 25px;
     list-style: none;
     opacity: 0;
     background: radial-gradient(rgb(44, 79, 175), transparent, transparent);
     bottom : 0;
     left: 10vw;
-    animation: animate 2.5s linear infinite;
+    animation: animate 5s linear infinite;
 }
 
 .box ul li:nth-child(2) {
@@ -29,37 +38,37 @@
 
 .box ul li:nth-child(3) {
     left: 26vw;
-    animation-delay: 1.5s;
+    animation-delay: 2s;
 }
 
 .box ul li:nth-child(4) {
     left: 35vw;
-    animation-delay: 1.2s;
+    animation-delay: 4s;
 }
 
 .box ul li:nth-child(5) {
     left: 42vw;
-    animation-delay: 0.5s;
+    animation-delay: 3s;
 }
 
 .box ul li:nth-child(6) {
     left: 58vw;
-    animation-delay: 1.5s;
+    animation-delay: 5s;
 }
 
 .box ul li:nth-child(7) {
     left: 61vw;
-    animation-delay: 0.7s;
+    animation-delay: 2s;
 }
 
 .box ul li:nth-child(8) {
     left: 77vw;
-    animation-delay: 1s;
+    animation-delay: 3s;
 }
 
 .box ul li:nth-child(9) {
     left: 85vw;
-    animation-delay: 1.3s;
+    animation-delay: 1s;
 }
 
 @keyframes animate {
