--- a/src/components/introduction.css
+++ b/src/components/introduction.css
@@ -14,7 +14,7 @@
     opacity: 0;
     transition: all 1s;
     filter: blur(5px);
-    transform: translateY(-100%);
+    transform: translateX(-100%);
 }
 
 .showTwo {
